--- a/app/views/assets/show.html.haml
+++ b/app/views/assets/show.html.haml
@@ -1,6 +1,9 @@
 
 =toolbar do |t|
   -t.edit(@asset)
+  -t.cede(@asset)
+  -t.sell(@asset)
+  -t.depreciate(@asset)
 
 =attributes_list(@asset) do |l|
   -l.attribute :name
