--- a/app/views/sale_lines/_row_form.html.haml
+++ b/app/views/sale_lines/_row_form.html.haml
@@ -1,7 +1,6 @@
 %fieldset.quick-add
   %legend=tc :add_quickly_a_line
-  =form_tag(:controller=>:sale_lines, :action=>:create) do 
-    =hidden_field_tag(:sale_id, @sale.id)
+  =form_tag(:controller=>:sale_lines, :action=>:create, :sale_id => @sale.id) do 
     %table.quick
       %tr
         %td=SaleLine.human_attribute_name("product")
